# bsmeta

./: .env  .gitignore  .gitmodules  Cargo.toml  myeval.c  plugintest.js  progress.py  schema.sql  script.sh
migrations/2020-12-30-135357_create_songs/: down.sql  up.sql
plugins/: cpython-preconfigure.patch  cpython.patch  genplugins.py  interp-js.c  interp-py-redefs.c  interp-py.c  plugin-difficulty.py  plugin-parity.js  pluginlist.json  quickjs.patch
src/: main.rs  schema.rs  scripts.rs  server.rs  wasm.rs
static/: index.html
