[package]
name = "bsmeta"
version = "0.1.0"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
decorum = "0.3"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
lewton = "0.10"
reqwest = { version = "0.10", features = ["blocking", "brotli", "gzip"] }
#rusqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tar = "0.4"
zip = "0.5"
