[package]
name = "bsmeta"
version = "0.1.0"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.9"
chrono = "0.4"
decorum = "0.3"
dotenv = "0.15.0"
env_logger = "0.8"
lewton = "0.10"
log = "0.4"
#meilisearch-sdk = "0.4.0"
# https://github.com/meilisearch/meilisearch-rust/pull/76
meilisearch-sdk = { git = "ssh://git@github.com/meilisearch/meilisearch-rust.git", rev = "d610bc6" }
reqwest = { version = "0.10", default-features = false, features = ["blocking", "brotli", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.4.2", features = [ "runtime-async-std-rustls", "sqlite" ] }
tar = "0.4"
tide = "0.16"
typetag = "0.1"
zip = "0.5"

wasi-common = { path = "wasmtime/crates/wasi-common" }
wiggle = { path = "wasmtime/crates/wiggle" }
wiggle-borrow = { path = "wasmtime/crates/wiggle/borrow" }

wasmer = "1"
wasmer-wasi = "1"

[profile.release]
debug = 1
overflow-checks = true
lto = "thin"

[profile.release.package."*"]
debug = 0
